--- a/LudumDare42/LudumDare42.csproj
+++ b/LudumDare42/LudumDare42.csproj
@@ -350,6 +350,8 @@
     <Compile Include="Assets\Scripts\AppConsts.cs" />
     <Compile Include="Assets\Scripts\DesktopSystemManager.cs" />
     <Compile Include="Assets\Scripts\DragController.cs" />
+    <Compile Include="Assets\Scripts\DropdownController.cs" />
+    <Compile Include="Assets\Scripts\DropdownOptionController.cs" />
     <Compile Include="Assets\Scripts\FileController.cs" />
     <Compile Include="Assets\Scripts\FileSystemManager.cs" />
     <Compile Include="Assets\Scripts\TimeSystemManager.cs" />
