File snapping && data management && log in screen difficulties && start menu

--- a/LudumDare42/LudumDare42.csproj
+++ b/LudumDare42/LudumDare42.csproj
@@ -350,15 +350,18 @@
     <Compile Include="Assets\Scripts\AntivirusManager.cs" />
     <Compile Include="Assets\Scripts\AppConsts.cs" />
     <Compile Include="Assets\Scripts\ClippyController.cs" />
+    <Compile Include="Assets\Scripts\DataManager.cs" />
     <Compile Include="Assets\Scripts\DesktopSystemManager.cs" />
     <Compile Include="Assets\Scripts\DragController.cs" />
     <Compile Include="Assets\Scripts\DropdownController.cs" />
     <Compile Include="Assets\Scripts\DropdownOptionController.cs" />
     <Compile Include="Assets\Scripts\FileController.cs" />
     <Compile Include="Assets\Scripts\FileSystemManager.cs" />
+    <Compile Include="Assets\Scripts\IconToggleManager.cs" />
     <Compile Include="Assets\Scripts\NotificationController.cs" />
     <Compile Include="Assets\Scripts\ProgressBarLoopController.cs" />
     <Compile Include="Assets\Scripts\RecycleBinController.cs" />
+    <Compile Include="Assets\Scripts\StartMenuController.cs" />
     <Compile Include="Assets\Scripts\StartupSceneController.cs" />
     <Compile Include="Assets\Scripts\SystemCrashHandler.cs" />
     <Compile Include="Assets\Scripts\TimeSystemManager.cs" />
